--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,7 @@
     "/css/purchase_information.css": "/css/purchase_information.css",
     "/css/purchase_information_v2.css": "/css/purchase_information_v2.css",
     "/css/signup.css": "/css/signup.css",
+    "/css/welcome.css": "/css/welcome.css",
     "/css/app.css": "/css/app.css",
     "/js/purchase.js": "/js/purchase.js"
 }
